--- a/CMCS/Views/Shared/_Layout.cshtml
+++ b/CMCS/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/Claims/ManageClaims">Coordinator Dashboard</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Claims/HRDashboard">HR Dashboard</a>
+                    </li>
                 </ul>
             </div>
         </div>
