Changes made: - recreated DB to fit in with new columns for lecturers

--- a/CMCS/Views/Claims/HRDashboard.cshtml
+++ b/CMCS/Views/Claims/HRDashboard.cshtml
@@ -15,6 +15,9 @@
         <thead>
             <tr>
                 <th>Lecturer Name</th>
+                <th>Email</th>
+                <th>Phone Number</th>
+                <th>Department</th>
                 <th>Hours Worked</th>
                 <th>Hourly Rate</th>
                 <th>Total Payment</th>
@@ -25,6 +28,9 @@
             {
                 <tr>
                     <td>@claim.LecturerName</td>
+                    <td>@claim.LecturerEmail</td>
+                    <td>@claim.LecturerPhoneNumber</td>
+                    <td>@claim.Department</td>
                     <td>@claim.HoursWorked</td>
                     <td>@claim.HourlyRate</td>
                     <td>@(claim.HoursWorked * claim.HourlyRate)</td>
